# lms

./: .clang-format  .clang-tidy  .gitignore  .lgtm.yml  .prettierrc  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile-build  Dockerfile-build-alpine  Dockerfile-build-arch  Dockerfile-release  INSTALL.md  Makefile.am  README  README.md  SUBSONIC.md  TODO  configure.ac
src/: CMakeLists.txt  Makefile.am
src/api/subsonic/: SubsonicId.cpp  SubsonicId.hpp  SubsonicResource.cpp  SubsonicResource.hpp  SubsonicResponse.cpp  SubsonicResponse.hpp
src/auth/: AuthService.cpp  AuthService.hpp  AuthTokenService.cpp  AuthTokenService.hpp  LoginThrottler.cpp  LoginThrottler.hpp  PasswordService.cpp  PasswordService.hpp
src/av/: AvInfo.cpp  AvInfo.hpp  AvTranscoder.cpp  AvTranscoder.hpp  AvTypes.cpp  AvTypes.hpp  CodecContext.cpp  Common.cpp  Common.hpp  InputFormatContext.cpp  InputFormatContext.hpp  Stream.hpp  tags
src/classifier/: Clusterer.hpp  DataNormalizer.cpp  DataNormalizer.hpp  SOM.cpp  SOM.hpp
src/clusterer/: Clusterer.hpp  DataNormalizer.cpp  DataNormalizer.hpp  SOM.cpp  SOM.hpp
src/config/: Config.cpp  Config.hpp  ConfigReader.cpp  ConfigReader.hpp
src/cover/: CoverArt.cpp  CoverArt.hpp  CoverArtGrabber.cpp  CoverArtGrabber.hpp
src/database/: Artist.cpp  Artist.hpp  AudioTypes.hpp  Classification.cpp  Classification.hpp  Cluster.cpp  Cluster.hpp  Database.cpp  Database.hpp  DatabaseClassifier.cpp  DatabaseClassifier.hpp  DatabaseFeatureExtractor.cpp  DatabaseFeatureExtractor.hpp  DatabaseHandler.cpp  DatabaseHandler.hpp  DatabaseUpdater.cpp  DatabaseUpdater.hpp  Db.cpp  Db.hpp  DbArtist.cpp  DbArtist.hpp  Genre.cpp  MediaDirectory.cpp  MediaDirectory.hpp  Playlist.cpp  Playlist.hpp  PlaylistEntry.cpp  Release.cpp  Release.hpp  ScanSettings.cpp  ScanSettings.hpp  SearchFilter.cpp  SearchFilter.hpp  Session.cpp  Session.hpp  SessionPool.cpp  Setting.cpp  Setting.hpp  SimilaritySettings.cpp  SimilaritySettings.hpp  (+19 more)
src/database-updater/: Checksum.hpp  DatabaseUpdater.cpp  DatabaseUpdater.hpp
src/database/cluster/: DatabaseHighLevelCluster.cpp  DatabaseHighLevelCluster.hpp
src/database/tagger/: GenreTagger.cpp  GenreTagger.hpp
src/database/updater/: DatabaseFeatureExtractor.cpp  DatabaseFeatureExtractor.hpp  DatabaseHighLevelCluster.cpp  DatabaseHighLevelCluster.hpp  DatabaseUpdater.cpp  DatabaseUpdater.hpp
src/feature/: FeatureExtractor.cpp  FeatureExtractor.hpp  FeatureStore.cpp  FeatureStore.hpp
src/image/: Image.cpp  Image.hpp
src/liblms/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/audio/: CMakeLists.txt
src/libs/auth/: CMakeLists.txt
src/libs/av/: CMakeLists.txt
src/libs/core/: CMakeLists.txt  TrackOn.hpp
src/libs/cover/: CMakeLists.txt
src/libs/database/: CMakeLists.txt
src/libs/image/: CMakeLists.txt
src/libs/lmscore/: CMakeLists.txt
src/libs/localplayer/: CMakeLists.txt
src/libs/metadata/: CMakeLists.txt
src/libs/recommendation/: CMakeLists.txt
src/libs/scanner/: CMakeLists.txt
src/libs/scrobbling/: CMakeLists.txt
src/libs/services/: CMakeLists.txt
src/libs/som/: CMakeLists.txt
src/libs/subsonic/: CMakeLists.txt
src/lms/: CMakeLists.txt  main.cpp
src/localplayer/: AudioOutput.hpp  AudioOutputException.hpp  LocalPlayer.cpp  LocalPlayer.hpp
src/logger/: Logger.cpp  Logger.hpp
src/main/: Services.cpp  Services.hpp  main.cpp
src/metadata/: AvFormat.cpp  AvFormat.hpp  Extractor.hpp  MetaData.cpp  MetaData.hpp  TagLibParser.cpp  TagLibParser.hpp  Utils.hpp
src/rest-api/: Resource.cpp  Resource.hpp
src/scanner/: MediaScanner.cpp  MediaScanner.hpp  MediaScannerAddon.hpp  MediaScannerStats.cpp  MediaScannerStats.hpp
src/service/: DatabaseUpdateService.cpp  DatabaseUpdateService.hpp  LmsAPIServerService.cpp  LmsAPIServerService.hpp  RemoteServerService.hpp  Service.hpp  ServiceManager.cpp  ServiceManager.hpp  UserInterfaceService.cpp  UserInterfaceService.hpp
src/similarity/: SimilaritySearcher.cpp  SimilaritySearcher.hpp
src/test/: CMakeLists.txt
src/tools/: CMakeLists.txt  Makefile.am
src/transcode/: AvConvTranscoder.cpp  AvConvTranscoder.hpp  Format.cpp  Format.hpp  InputMediaFile.cpp  InputMediaFile.hpp  Parameters.cpp  Parameters.hpp  Stream.hpp
src/ui/: ArtistView.cpp  ArtistView.hpp  ArtistsView.cpp  ArtistsView.hpp  Auth.cpp  Auth.hpp  Explore.cpp  Explore.hpp  Filters.cpp  Filters.hpp  HomeView.cpp  HomeView.hpp  LmsApplication.cpp  LmsApplication.hpp  LmsApplicationGroup.cpp  LmsApplicationGroup.hpp  LmsHome.cpp  LoginView.cpp  LoginView.hpp  MediaPlayer.cpp  MediaPlayer.hpp  PlayHistoryView.cpp  PlayHistoryView.hpp  PlayQueueView.cpp  PlayQueueView.hpp  PlaylistView.cpp  PlaylistView.hpp  ReleaseView.cpp  ReleaseView.hpp  ReleasesView.cpp  ReleasesView.hpp  SettingsView.cpp  SettingsView.hpp  TrackStringUtils.cpp  TracksView.cpp  TracksView.hpp
src/utils/: Checksum.cpp  Checksum.hpp  ChildProcess.cpp  ChildProcess.hpp  ChildProcessManager.cpp  ChildProcessManager.hpp  Config.cpp  Config.hpp  Exception.cpp  Exception.hpp  IChildProcess.hpp  IChildProcessManager.hpp  Logger.cpp  Logger.hpp  NetAddress.cpp  Path.cpp  Path.hpp  Random.cpp  Service.hpp  StreamLogger.cpp  String.cpp  String.hpp  UUID.cpp  UUID.hpp  Utils.cpp  Utils.hpp  WtLogger.cpp  WtLogger.hpp
test/: CheckDatabaseBasics.cpp  CheckDatabaseUser.cpp  CheckDbBasics.cpp  CheckSqlQuery.cpp  DatabaseIntegrity.cpp  Makefile.am  Makefile.in  RemoteClient.cpp  RemoteClientServer.cpp  TestAvMetadata.cpp  TestAvTranscoder.cpp  TestDatabase.cpp  TestDatabase.hpp  TestWt.cpp  TestWtAudio.cpp  test.db  test2.db
test/database/: DatabaseTest.cpp
test/som/: SomTest.cpp
test/som-test/: SomTest.cpp
tools/classifier/: LmsClassifier.cpp  Makefile.am
tools/clusterer/: LmsClusterer.cpp  Makefile.am
tools/feature-extractor/: LmsFeatureExtractor.cpp  Makefile.am
tools/metadata/: LmsMetadata.cpp  Makefile.am
tools/process-spawner/: Makefile.am  ProcessSpawner.cpp
tools/similarity/: LmsSimilarity.cpp  Makefile.am
tools/similarity-parameters/: GeneticAlgorithm.hpp  LmsSimilarityParameters.cpp  Makefile.am  ParallelFor.hpp
(+2027 files in other folders)
