
TESTS = som-test

check_PROGRAMS = som-test

som_test_SOURCES = \
	$(srcdir)/som-test/SomTest.cpp					\
	$(top_srcdir)/src/similarity/features/som/DataNormalizer.cpp	\
	$(top_srcdir)/src/similarity/features/som/Network.cpp

som_test_CXXFLAGS=-std=c++14 -Wall -I${top_srcdir}/src/ -I${top_srcdir}/src/similarity/features/som/



